# guarakapa

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml
src/: cli.yml  codec.rs  crypto.rs  fman.rs  fs.rs  lib.rs  main.rs  scanpw.rs
tests/: cli.rs  integration.rs
