[package]
name = "guarakapa"
version = "0.9.8"
edition = "2021"

[[bin]]
name = "kapa"
path = "src/main.rs"

[lib]
name = "guarakapa"
path = "src/lib.rs"

[dependencies]
openssl = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
anyhow = "1"
x11-clipboard = "0.5"
termion = "1.5"

[dev-dependencies]
rexpect = "0.4"
