[package]
name = "guarakapa"
version = "0.9.11"
edition = "2021"
description = "A password manager for the terminal"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/yds12/guarakapa"
repository = "https://github.com/yds12/guarakapa"

[[bin]]
name = "kapa"
path = "src/main.rs"

[lib]
name = "guarakapa"
path = "src/lib.rs"

[dependencies]
openssl = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
anyhow = "1"
x11-clipboard = "0.7.1"
termion = "1.5"

[dev-dependencies]
rexpect = "0.5"

[package.metadata.deb]
maintainer = "guarakapa developers"
copyright = "2021, guarakapa developers"
depends = "$auto"
